# DigiPlane

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: cmake.yml  windows.yml
Core/: CMakeLists.txt  core.cpp  core.hpp  pch.hpp  types.hpp
Core/geometry/: mesh.hpp
Core/graphics/: CMakeLists.txt  nuklear_impl.cpp  nuklear_impl.hpp  shaders.cpp  shaders.hpp
Core/include/Digiplane/: core.hpp  digiplane.hpp  nuklear_impl.hpp
Core/plugins/: imgui_impl.hpp  nuklear_impl.cpp  nuklear_impl.hpp
DigiPlaneEngine/: CMakeLists.txt  Components.h  Components.hpp  Engine.cpp  Engine.hpp  Scene.cpp  Scene.hpp  Utils.cpp  Utils.hpp  all_include.hpp  glad.c
Editor/: CMakeLists.txt  Editor.cpp  Editor.hpp  Editor.rc  Main.cpp  main.cpp
Editor/interface/: interface.cpp  interface.hpp  precompiled_fonts.hpp
Game/: CMakeLists.txt
Runtime/: CMakeLists.txt  Main.cpp  Runtime.hpp
core/: CMakeLists.txt  core.cpp  init.cpp  internal.hpp  pch.hpp  types.hpp
core/graphics/: CMakeLists.txt  mesh.hpp  shaders.cpp  window.cpp
core/include/DigiPlane/: dp_core.hpp
core/include/Digiplane/: core.hpp  imgui_impl.hpp  nuklear_impl.hpp
include/: README.md  nuklear_sdl_gl3.h
include/glad/: glad.h
modules/: README.md
